--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -1,5 +1,5 @@
 # Shadowrocket Rules by Skyrocketing Hong (https://github.com/skyrocketing1999/Shadowrocket-ADBlock-Rules)
-# build time: 2020-08-02 12:49:53
+# build time: 2020-08-02 13:27:21
 
 [General]
 bypass-system = true
@@ -908,7 +908,7 @@ DOMAIN-SUFFIX,yuanchengxiezuo.com,Reject
 DOMAIN-SUFFIX,zbrushcn.com,Reject
 DOMAIN-SUFFIX,zhzzx.com,Reject
 
-# adblock rules refresh time: 2020-08-02 12:49:52
+# adblock rules refresh time: 2020-08-02 13:27:20
 DOMAIN-SUFFIX,0024aaaa.com,Reject
 DOMAIN-SUFFIX,0026645142c89aeb1.com,Reject
 DOMAIN-SUFFIX,003store.com,Reject
@@ -46533,7 +46533,96 @@ IP-CIDR,74.125.23.127/32,Proxy,force-remote-dns
 # hacker news web site
 DOMAIN-SUFFIX,news.ycombinator.com,Proxy,force-remote-dns
 
-FINAL,direct,no-resolve
+# 手工定义的 Direct 列表
+#153
+DOMAIN-SUFFIX,api.cloudmobi.net,Direct,no-resolve
+DOMAIN-SUFFIX,hotmail.com,Direct,no-resolve
+#学术网站
+DOMAIN-SUFFIX,researchgate.net,Direct,no-resolve
+DOMAIN-SUFFIX,springer.com,Direct,no-resolve
+DOMAIN-SUFFIX,blackwell-synergy.com,Direct,no-resolve
+DOMAIN-SUFFIX,sciencemag.org,Direct,no-resolve
+DOMAIN-SUFFIX,jstor.org,Direct,no-resolve
+DOMAIN-SUFFIX,cabdirect.org,Direct,no-resolve
+DOMAIN-SUFFIX,ieee.org,Direct,no-resolve
+DOMAIN-SUFFIX,nature.com,Direct,no-resolve
+DOMAIN-SUFFIX,osapublishing.org,Direct,no-resolve
+#CHN Games
+DOMAIN-SUFFIX,kunlun-cdn.com,Direct,no-resolve
+DOMAIN-KEYWORD,brawlstars,Direct,no-resolve
+DOMAIN-KEYWORD,clashroyale,Direct,no-resolve
+DOMAIN-KEYWORD,clashofclans,Direct,no-resolve
+
+# 手工定义的 Proxy 列表
+#161 可能以后会和GFWList重复
+DOMAIN-SUFFIX,9gag.com,Proxy,force-remote-dns
+#disqus
+DOMAIN-SUFFIX,disquscdn.com,Proxy,force-remote-dns
+#20 开车
+DOMAIN-SUFFIX,t66y.com,Proxy,force-remote-dns
+#50 whatsapp
+DOMAIN-SUFFIX,whatsapp.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,whatsapp.net,Proxy,force-remote-dns
+IP-CIDR,18.194.0.0/15,Proxy,force-remote-dns
+IP-CIDR,34.224.0.0/12,Proxy,force-remote-dns
+#54 台湾香港澳门 常用网站
+DOMAIN-SUFFIX,ptt.cc,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mingpaocanada.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mingpao.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,appledaily.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,appledaily.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nextmag.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,thestandnews.com,Proxy,force-remote-dns
+#85（可能冗余）
+DOMAIN-SUFFIX,www-google-analytics.l.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ssl-google-analytics.l.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,partnerad.l.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pagead.l.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pagead.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pagead-tpc.l.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mobileads.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ads.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,afd.l.google.com,Proxy,force-remote-dns
+#175 华尔街邮报
+DOMAIN-SUFFIX,dowjones.com,Proxy,force-remote-dns
+#159
+DOMAIN-SUFFIX,thetvdb.com,Proxy,force-remote-dns
+#180 OneDrive（可能冗余）
+DOMAIN-SUFFIX,bcbits.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ogma.iad.appboy.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,odc.officeapps.live.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,skyapi.live.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,centralus1.mediap.svc.ms,Proxy,force-remote-dns
+DOMAIN-SUFFIX,dm.files.1drv.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mobile.pipe.aria.microsoft.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gate.hockeyapp.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,skyapi.live.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,api.onedrive.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,vortex.data.microsoft.com,Proxy,force-remote-dns
+#183
+DOMAIN-SUFFIX,mendeley.com,Proxy,force-remote-dns
+#192 播客收听应用程序 overcast
+DOMAIN-SUFFIX,overcast.fm,Proxy,force-remote-dns
+#205 APPLE NEWS
+DOMAIN-SUFFIX,news-events.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,news-edge.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,apple.comscoreresearch.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,play.itunes.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,play-cdn.itunes-apple.com.akadns.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ls.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cvws.apple-dns.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,news.apple-dns.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gateway.fe.apple-dns.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,akamaiedge.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gs-loc.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,bag.itunes.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,apple.news,Proxy,force-remote-dns
+DOMAIN-SUFFIX,news.iadsdk.apple.com,Proxy,force-remote-dns
+# RSSHub
+DOMAIN-SUFFIX,rsshub.app,Proxy,force-remote-dns
+
+# 其它地址全部直连
+FINAL,Direct,no-resolve
 
 [URL Rewrite]
 ^http://(www.)?google.cn https://www.google.com 302
