--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -1,5 +1,5 @@
 # Shadowrocket Rules by Skyrocketing Hong (https://github.com/skyrocketing1999/Shadowrocket-ADBlock-Rules)
-# build time: 2020-08-02 21:43:54
+# build time: 2020-08-02 21:54:39
 
 [General]
 bypass-system = true
@@ -48,9 +48,9 @@ IP-CIDR,169.45.248.118/32,PROXY,no-resolve
 DOMAIN-SUFFIX,pscp.tv,PROXY,force-remote-dns
 DOMAIN-SUFFIX,periscope.tv,PROXY,force-remote-dns
 DOMAIN-SUFFIX,t.co,PROXY,force-remote-dns
-DOMAIN-SUFFIX,twimg.co,PROXY,force-remote-dns
 DOMAIN-SUFFIX,vine.co,PROXY,force-remote-dns
 DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
+DOMAIN-KEYWORD,twimg,PROXY,force-remote-dns
 USER-AGENT,Twitter*,Proxy,force-remote-dns
 # > Telegram
 DOMAIN-SUFFIX,t.me,PROXY
@@ -1247,7 +1247,7 @@ DOMAIN-SUFFIX,yuanchengxiezuo.com,Reject
 DOMAIN-SUFFIX,zbrushcn.com,Reject
 DOMAIN-SUFFIX,zhzzx.com,Reject
 
-# adblock rules refresh time: 2020-08-02 21:43:53
+# adblock rules refresh time: 2020-08-02 21:54:38
 DOMAIN-SUFFIX,0024aaaa.com,Reject
 DOMAIN-SUFFIX,0026645142c89aeb1.com,Reject
 DOMAIN-SUFFIX,003store.com,Reject
