--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -46966,7 +46966,7 @@ DOMAIN-SUFFIX,news.iadsdk.apple.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rsshub.app,Proxy,force-remote-dns
 
 # 其它地址全部直连
-FINAL,Direct,no-resolve
+FINAL,Direct
 
 [URL Rewrite]
 ^http://(www.)?google.cn https://www.google.com 302
